compiler/tests/fixtures/invalid/semantics/duplicate_salience_role.viv
// Duplicate role entry in saliences

action bad-salience-dup:
    roles:
        @actor:
            as: initiator
        @target:
            as: recipient
    saliences:
        roles:
            @target: #HIGH
            @target: #LOW
